fix(Toggle): Vertical alignment

--- a/src/components/form/Toggle.css
+++ b/src/components/form/Toggle.css
@@ -9,7 +9,7 @@
 }
 
 .ax-toggle {
-  display: inline-flex;
+  display: flex;
   position: relative;
 }
 
